# ai-agent-roi-calculator

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/ai_agent_roi_calculator/: __init__.py  cli.py  core.py
tests/: test_core.py
