[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-roi-calculator"
version = "0.1.0"
description = "Interactive web tool for estimating deployment ROI using market data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/ai-agent-roi-calculator"
Issues = "https://github.com/erron-ai/ai-agent-roi-calculator/issues"

[project.scripts]
ai-agent-roi-calculator = "ai_agent_roi_calculator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
